<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        tools:context=".MainActivity"
       >


        <EditText
            android:id="@+id/edtTitleOfNote"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="36dp"

            android:hint="@string/type_tour_title_here"

            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />


        <EditText
            android:id="@+id/edtNoteDiscripton"
            android:layout_width="360dp"
            android:layout_height="350dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"

            android:background="@color/darkwhite"
            android:gravity="top"
            android:hint="@string/type_your_discription_here"
            android:inputType="textMultiLine"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"

            />

        <Button
            android:id="@+id/enterButton"
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/enter_data" />
        <Button
            android:id="@+id/showList"
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/list"


            />
        <Button
            android:id="@+id/btnDelete"
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"
            android:text="@string/delete_note"


            />

    </LinearLayout>
</layout>